--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1139,6 +1139,10 @@ video {
   }
 }
 
+.skill-tag:hover {
+    cursor: default;
+}
+
 /* About Me Block */
 
 .mail-link {
@@ -1241,6 +1245,10 @@ video {
     --tw-text-opacity: 1;
     color: rgb(0 0 0);
   }
+}
+
+.job-item-badge:hover {
+    cursor: default;
 }
 
 /* Articles Block */
