--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -942,7 +942,9 @@ video {
   margin-left: auto;
   margin-right: auto;
   max-width: 64rem;
-  padding: 1rem;
+  padding-top: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 @media (min-width: 640px) {
